force-app/main/default/objects/Subsidy_Determination_Rule__c/Subsidy_Determination_Rule__c.object-meta.xml
<CustomObject>
    <description>INT-014 — reference table of transport-type multipliers and regional thresholds used by the Determine_Subsidy Screen Flow.</description>
    <label>Subsidy Determination Rule</label>
    <pluralLabel>Subsidy Determination Rules</pluralLabel>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>