force-app/main/default/objects/Subsidy_Determination_Rule__c/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <label>Base Amount</label>
    <description>INT-024 — base subsidy for this Region × Transport_Type × distance band, composed with Multiplier__c.</description>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>