force-app/main/default/objects/Subsidy_Determination_Rule__c/fields/Distance_Max_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_Max_Km__c</fullName>
    <label>Distance Max (km)</label>
    <description>INT-024 — exclusive upper bound of the distance band. Blank = "and above."</description>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>