force-app/main/default/objects/Subsidy_Determination_Rule__c/fields/Distance_Min_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_Min_Km__c</fullName>
    <label>Distance Min (km)</label>
    <description>INT-024 — inclusive lower bound of the distance band this rule row applies to.</description>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>