force-app/main/default/objects/Subsidy_Determination_Rule__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Threshold</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>